use dvChallenge as project name

--- a/templates/desktop.html
+++ b/templates/desktop.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>DivvyChallenge</title>
+    <title>dvChallenge</title>
     <style>
         /* core style */
         body { font-family: 'Maven Pro', sans-serif; }
@@ -30,7 +30,7 @@
 <body>
 <div id="wrap">
     <div id="header">
-        <h1>Divvy Challenge Usage and Availabilty Map</h1>
+        <h1>dvChallenge Usage and Availabilty Map</h1>
     </div>
     <div id="map">
     </div>
