--- a/templates/desktop.html
+++ b/templates/desktop.html
@@ -79,9 +79,9 @@
           '<h2 class="markerHeadline">' + s['name'] + '</h2>' +
           '<h4 class="markerInfo">' + s['bikes'] + ' bikes available / ' + s['docks'] + ' docks</h4>' +
           '<div id="markerTimeline-' + s['id'] + '" class="markerTimeline"></div>' +
-          '<div class="graphNote">available bikes over previous 24 hours</div>' +
+          '<div class="graphNote">available bikes over previous 72 hours</div>' +
           '<div id="markerGraph-' + s['id'] + '" class="markerGraph"></div>' +
-          '<div class="graphNote">weekday averages from historical data</div></div>'
+          '<div class="graphNote">weekday averages from 2013 dataset</div></div>'
         ).openPopup();
         $.getJSON('/station/' + s['id'], function(report) {
           // timeline chart
