--- a/templates/desktop.html
+++ b/templates/desktop.html
@@ -11,10 +11,10 @@
         body { font-family: 'Maven Pro', sans-serif; background-color: gray; }
         a, a:hover { /* text-decoration: none; */ color: #333; }
         p { font-size: 1.2em; }
-        #wrap { width: 90%; margin: 10px auto 40px auto; padding: 20px 20px 40px 20px; background-color: white; }
+        #wrap { width: 86%; margin: 10px auto 40px auto; padding: 20px 20px 40px 20px; background-color: white; }
         #map { height: 600px; }
         #header { margin: 0; background-color: #3DB7E4; }
-        #header h1 { padding: 5px 10px 5px 10px; color: white; }
+        #header h1 { padding: 10px 10px 10px 10px; color: white; }
         /* style for marker popups */
         .markerBox { width: 300px; margin-bottom: 20px; }
         .markerHeadline { margin-bottom: -6px; line-height: 1; clear: both;}
@@ -23,7 +23,7 @@
         .markerGraph { height: 150px; width: 300px; margin-bottom: 0; clear: both; }
         .graphNote { margin-top: 0px; margin-right: 20px; text-size: .75em; text-align: right; }
         /* content formatting (below map) */
-        #content { width: 100%; margin: 0 auto 0 auto; padding: 0; }
+        #content { width: 100%; margin: auto; padding: 0; }
         #footer { margin: 0; background-color: #3DB7E4; }
         #footer h1 { padding: 5px; color: white; }
         #content-column-1 { width: 46%; margin: 0 2% 0 2%; float: left; }
@@ -75,43 +75,46 @@
 </div>
 </body>
 
-<!-- almighty jquery -->
+<!-- include jquery -->
 <script src="http://code.jquery.com/jquery-2.1.0.min.js"></script>
-<!-- includes for leaflet.js -->
+<!-- include leaflet.js -->
 <script src="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.js"></script>
-<!-- includes for morris.js -->
+<!-- include morris.js -->
 <script src="http://cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"></script>
 <script src="http://cdn.oesmith.co.uk/morris-0.4.3.min.js"></script>
+
 <!-- my js -->
 <script type="text/javascript">
-  // setup map
-  var map = L.map('map').setView([41.90, -87.64], 14);
-  L.tileLayer('http://{s}.tile2.opencyclemap.org/transport/{z}/{x}/{y}.png', {
-    attribution: '<a href="http://www.openstreetmap.org/about">OpenStreetMaps</a>',
-    minZoom: 13,
-    maxZoom: 16,
-  }).addTo(map);
+// function to create popup content html
+generatePopupHtml = function(s) {
+    return '<div class="markerBox">' +
+        '<h2 class="markerHeadline">' + s['name'] + '</h2>' +
+        '<h4 class="markerInfo">' + s['bikes'] + ' bikes available / ' + s['docks'] + ' docks</h4>' +
+        '<div id="markerTimeline-' + s['id'] + '" class="markerTimeline"></div>' +
+        '<div class="graphNote">available bikes over previous 72 hours</div>' +
+        '<div id="markerGraph-' + s['id'] + '" class="markerGraph"></div>' +
+        '<div class="graphNote">weekday averages from 2013 dataset</div>' +
+        '</div>';
+};
 
-  // load markers from json-api stations
-  $.getJSON('/station', function(data) {
-    $.each(data, function(key, s) {
-      // create marker
-      L.marker([ s['lat'], s['lng'] ])
-      .addTo(map)
-      .on('click', function(e) {
-        // handle click event
-        this.bindPopup(
-          '<div class="markerBox">' +
-          '<h2 class="markerHeadline">' + s['name'] + '</h2>' +
-          '<h4 class="markerInfo">' + s['bikes'] + ' bikes available / ' + s['docks'] + ' docks</h4>' +
-          '<div id="markerTimeline-' + s['id'] + '" class="markerTimeline"></div>' +
-          '<div class="graphNote">available bikes over previous 72 hours</div>' +
-          '<div id="markerGraph-' + s['id'] + '" class="markerGraph"></div>' +
-          '<div class="graphNote">weekday averages from 2013 dataset</div></div>'
-        ).openPopup();
-        $.getJSON('/station/' + s['id'], function(report) {
-          // timeline chart
-          new Morris.Line({
+// setup map
+var map = L.map('map').setView([41.90, -87.64], 14);
+L.tileLayer('http://{s}.tile2.opencyclemap.org/transport/{z}/{x}/{y}.png', {
+  attribution: '<a href="http://www.openstreetmap.org/about">OpenStreetMaps</a>',
+  minZoom: 13,
+  maxZoom: 16,
+}).addTo(map);
+
+// load markers from json-api stations
+$.getJSON('/station', function(data) {
+  $.each(data, function(key, s) {
+    // create marker
+    L.marker([ s['lat'], s['lng'] ])
+    .addTo(map)
+    .bindPopup(generatePopupHtml(s), { keepInView: true, closeOnClick: false })
+    .on('click', function(e) {
+      $.getJSON('/station/' + s['id'], function(report) {
+        new Morris.Line({       // timeline chart
             element: 'markerTimeline-' + s['id'],
             data: report['timeline'],
             xkey: 'timestamp',
@@ -120,9 +123,8 @@
             labels: ['Available Bikes'],
             gridTextSize: 8,
             hideHover: true
-          });
-          // day of week bar graph
-          new Morris.Bar({
+        });
+        new Morris.Bar({        // day of week bar graph
             element: 'markerGraph-' + s['id'],
             data: report['graph'],
             xkey: 'day',
@@ -131,10 +133,11 @@
             labels: ['rents', 'returns'],
             gridTextSize: 8,
             hideHover: true
-          });
         });
       });
+      this.openPopup();
     });
   });
+});
 </script>
 </html>
