--- a/templates/desktop.html
+++ b/templates/desktop.html
@@ -85,59 +85,71 @@
 
 <!-- my js -->
 <script type="text/javascript">
-// function to create popup content html
+
 generatePopupHtml = function(s) {
-    return '<div class="markerBox">' +
+    return ' ' +
+      '<div class="markerBox">' +
         '<h2 class="markerHeadline">' + s['name'] + '</h2>' +
-        '<h4 class="markerInfo">' + s['bikes'] + ' bikes available / ' + s['docks'] + ' docks</h4>' +
+        '<h4 class="markerInfo">' +
+            s['bikes'] + ' bikes available / ' + s['docks'] + ' docks' +
+        '</h4>' +
         '<div id="markerTimeline-' + s['id'] + '" class="markerTimeline"></div>' +
         '<div class="graphNote">available bikes over previous 72 hours</div>' +
         '<div id="markerGraph-' + s['id'] + '" class="markerGraph"></div>' +
         '<div class="graphNote">weekday averages from 2013 dataset</div>' +
-        '</div>';
+      '</div>';
+};
+
+drawTimeLine = function(id, data) {
+    return new Morris.Line({       // timeline chart
+        element: 'markerTimeline-' + id,
+        data: data,
+        xkey: 'timestamp',
+        ykeys: ['bikes'],
+        lineColors: ['#3DB7E4'],
+        labels: ['Available Bikes'],
+        gridTextSize: 8,
+        hideHover: true
+    });
+};
+
+drawDaysGraph = function(id, data) {
+    return new Morris.Bar({        // day of week bar graph
+        element: 'markerGraph-' + id,
+        data: data,
+        xkey: 'day',
+        ykeys: ['rents', 'returns'],
+        barColors: ['red', 'green'],    // XXX replace with proper color
+        labels: ['rents', 'returns'],
+        gridTextSize: 8,
+        hideHover: true
+    });
 };
 
 // setup map
 var map = L.map('map').setView([41.90, -87.64], 14);
 L.tileLayer('http://{s}.tile2.opencyclemap.org/transport/{z}/{x}/{y}.png', {
-  attribution: '<a href="http://www.openstreetmap.org/about">OpenStreetMaps</a>',
-  minZoom: 13,
-  maxZoom: 16,
+    attribution: '<a href="http://www.openstreetmap.org/about">OpenStreetMaps</a>',
+    minZoom: 13,
+    maxZoom: 16,
 }).addTo(map);
 
 // load markers from json-api stations
 $.getJSON('/station', function(data) {
-  $.each(data, function(key, s) {
-    // create marker
-    L.marker([ s['lat'], s['lng'] ])
+  $.each(data, function(key, station) {
+    L.marker([ station['lat'], station['lng'] ])
     .addTo(map)
-    .bindPopup(generatePopupHtml(s), { keepInView: true, closeOnClick: false })
+    .bindPopup(generatePopupHtml(station), { closeOnClick: false })
     .on('click', function(e) {
-      $.getJSON('/station/' + s['id'], function(report) {
-        new Morris.Line({       // timeline chart
-            element: 'markerTimeline-' + s['id'],
-            data: report['timeline'],
-            xkey: 'timestamp',
-            ykeys: ['bikes'],
-            lineColors: ['#3DB7E4'],
-            labels: ['Available Bikes'],
-            gridTextSize: 8,
-            hideHover: true
+        $.getJSON('/station/' + station['id'], function(report) {
+            drawTimeLine(station['id'], report['timeline']);
+            drawDaysGraph(station['id'], report['graph']);
         });
-        new Morris.Bar({        // day of week bar graph
-            element: 'markerGraph-' + s['id'],
-            data: report['graph'],
-            xkey: 'day',
-            ykeys: ['rents', 'returns'],
-            barColors: ['red', 'green'],    // XXX replace with proper color
-            labels: ['rents', 'returns'],
-            gridTextSize: 8,
-            hideHover: true
-        });
-      });
-      this.openPopup();
+        this.openPopup();
     });
   });
 });
+
 </script>
+
 </html>
