fix link to github codebase

--- a/templates/main.html
+++ b/templates/main.html
@@ -70,7 +70,7 @@
 
             <p class="myinfo">
             This project is by <a href="http://vicg4rcia.com">Vic Garcia</a>.<br/>
-            The code is on <a href="http://github.com/vicg4rcia/dvmap">GitHub</a>.
+            The code is on <a href="http://github.com/vicgarcia/dvMap">GitHub</a>.
             </p>
         </div>
     </div>
