add fade in/out to blockUI to clean up effect

--- a/templates/main.html
+++ b/templates/main.html
@@ -151,7 +151,9 @@ $.getJSON('/station', function(data) {
         $('#markerBox-' + station['id']).block({
             message: '<h2>loading...</h2>',
             css: { backgroundColor: 'white', border: 'none' },
-            overlayCSS: { backgroundColor: 'white', opacity: 1 }
+            overlayCSS: { backgroundColor: 'white', opacity: 1 },
+            fadeIn: 0,
+            fadeOut: 500
         });
         $.getJSON('/station/' + station['id'], function(report) {
             drawTimeLine(station['id'], report['timeline']);
