--- a/templates/main.html
+++ b/templates/main.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name='viewport' content='width=device-width, initial-scale=0.72, maximum-scale=0.72, user-scalable=no' />
+    <meta name='title' content='dvMap' />
+    <meta name='description' content='An interactive map using a combination of data related to useage of the Divvy bike system. It allows you to view information by station, showing real time and historic data side by side.' />
 
     <title>dvMap</title>
     <style>
