add icons for desktop and apple devices

--- a/templates/main.html
+++ b/templates/main.html
@@ -38,6 +38,9 @@
     <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.css" />
     <link rel="stylesheet" href="http://cdn.oesmith.co.uk/morris-0.4.3.min.css">
     <link href='http://fonts.googleapis.com/css?family=Maven+Pro:400,500,700' rel='stylesheet' type='text/css'>
+    <link rel="shortcut icon" href="/dvmap-icon.ico"/>
+    <link rel="icon" href="/dvmap-icon.ico"/>
+    <link rel="apple-touch-icon" href="/dvmap-icon.png">
 </head>
 
 <body>
