minor spacing, syntax, and readability fixes

--- a/templates/main.html
+++ b/templates/main.html
@@ -92,7 +92,7 @@
 <script src="http://cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"></script>
 <script src="http://cdn.oesmith.co.uk/morris-0.4.3.min.js"></script>
 
-<!-- my js -->
+<!-- dvmap js -->
 <script type="text/javascript">
 
 // some functions
