--- a/templates/main.html
+++ b/templates/main.html
@@ -109,7 +109,9 @@ generatePopupHtml = function(s) {
         '<div class="graphNote">available bikes over previous 72 hours</div>' +
         '<div id="markerGraph-' + s['id'] + '" class="markerGraph"></div>' +
         '<div class="graphNote">weekly averages from 2013 dataset</div>' +
-        '<div id="markerAverages-' + s['id'] + '" class="markerAverages"></div>' +
+        '<div id="markerAverages-' + s['id'] + '" class="markerAverages">' +
+            '_ rentals per week  /  _ returns per week <br /> rents to returns ratio : _' +
+        '</div>' +
       '</div>';
 };
 
