added twitter link, shirnk text size in credits

--- a/templates/main.html
+++ b/templates/main.html
@@ -34,7 +34,7 @@
         #content-column-1 { width: 46%; margin: 0 2% 0 2%; float: left; }
         #content-column-2 { width: 46%; margin: 0 2% 0 2%; float: left; }
         .clear { clear: both; }
-        .myinfo { padding-top: 20px; clear: both;}
+        .myinfo { padding-top: 20px; clear: both; font-size: .9em; }
     </style>
     <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.css" />
     <link rel="stylesheet" href="http://cdn.oesmith.co.uk/morris-0.4.3.min.css">
@@ -76,7 +76,8 @@
 
             <p class="myinfo">
             This project is by <a href="http://vicg4rcia.com">Vic Garcia</a>.<br/>
-            The code is on <a href="http://github.com/vicgarcia/dvMap">GitHub</a>.
+            The code is on <a href="http://github.com/vicgarcia/dvMap">GitHub</a>.<br/>
+            Contact me via <a href="http://twitter.com/chester250">Twitter</a>.
             </p>
         </div>
     </div>
