--- a/templates/main.html
+++ b/templates/main.html
@@ -21,10 +21,10 @@
         .markerBox { width: 300px; margin-bottom: 20px; }
         .markerHeadline { margin-bottom: -6px; line-height: 1; clear: both;}
         .markerAvailabile { line-height: 1; clear: both;}
-        .markerTimeline { height: 150px; width: 300px; margin-top: -20px; padding: 0; margin-bottom: 0; clear: both; }
-        .markerGraph { height: 150px; width: 300px; margin-bottom: 0; clear: both; }
-        .graphNote { margin-top: 0px; margin-right: 20px; text-size: .75em; text-align: right; }
-        .markerAverages { margin-top: 5px; margin-right: 20px; text-size: .9em; text-align: right; }
+        .markerTimeline { height: 150px; width: 300px; margin-top: -10px; margin-bottom: 5px; clear: both; }
+        .markerGraph { height: 150px; width: 300px; margin-top: -10px; margin-bottom: 0; clear: both; }
+        .graphNote { margin-bottom: 0px; margin-right: 20px; font-size: 1em; text-align: right; }
+        .markerAverages { margin-top: 0px; margin-right: 20px; font-size: .9em; text-align: right; }
         .rentals { background-color: #3DB7E4; color: white; }
         .returns { background-color: #788A91; color: white; }
         /* content formatting (below map) */
@@ -106,10 +106,10 @@ generatePopupHtml = function(s) {
         '<h4 class="markerInfo">' +
             s['bikes'] + ' bikes available / ' + s['docks'] + ' docks' +
         '</h4>' +
-        '<div id="markerTimeline-' + s['id'] + '" class="markerTimeline"></div>' +
         '<div class="graphNote">available bikes over previous 72 hours</div>' +
-        '<div id="markerGraph-' + s['id'] + '" class="markerGraph"></div>' +
+        '<div id="markerTimeline-' + s['id'] + '" class="markerTimeline"></div>' +
         '<div class="graphNote">weekly averages from 2013 dataset</div>' +
+        '<div id="markerGraph-' + s['id'] + '" class="markerGraph"></div>' +
         '<div id="markerAverages-' + s['id'] + '" class="markerAverages">' +
             '_ rentals per week  /  _ returns per week <br /> rents to returns ratio : _' +
         '</div>' +
