--- a/templates/main.html
+++ b/templates/main.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name='viewport' content='width=device-width, initial-scale=0.72, maximum-scale=0.72, user-scalable=no' />
     <meta name='title' content='dvMap' />
-    <meta name='description' content='An interactive map using a combination of data related to useage of the Divvy bike system. It allows you to view information by station, showing real time and historic data side by side.' />
+    <meta name='description' content='An interactive map using a combination of data related to useage of the Divvy bike system.' />
 
     <title>dvMap</title>
     <style>
@@ -43,10 +43,12 @@
     <link rel="shortcut icon" href="/dvmap-icon.ico"/>
     <link rel="icon" href="/dvmap-icon.ico"/>
     <link rel="apple-touch-icon" href="/dvmap-icon.png">
+    <link rel="image_src" href="/thumbnail.png"/>
 </head>
 
 <body>
 <div id="wrap">
+    <img class="facebook-thumbnail" src="/thumbnail.png" />
     <div id="map">
     </div>
     <div id="header">
@@ -67,8 +69,8 @@
         <div id="content-column-2">
             <br/>
             <p>
-            This interactive application was originally created for Divvy's
-            <a href="http://divvybikes.com/datachallenge">Data Challenge</a>.
+            This interactive application was originally created for the
+            <a href="http://divvybikes.com/datachallenge">Divvy Data Challenge</a>.
             </p>
             <p>This project is by <a href="http://vicg4rcia.com">Vic Garcia</a>.</p>
             <p>The code is on <a href="http://github.com/vicgarcia/dvMap">GitHub</a>.</p>
