use from, not thru

--- a/templates/main.html
+++ b/templates/main.html
@@ -63,7 +63,7 @@
             <p>The bar graph at the bottom of each popup shows the average usage per day
             of the week in the last 30 days.  Usage is measured as the number of bikes
             removed from a station throughout the day.  This metric is an approximate
-            derrived from data collected thru Divvy's website.</p>
+            derrived from data collected from Divvy's website.</p>
         </div>
         <div id="content-column-2">
             <br/>
